# transcoder

./: .env  .gitignore  AGENTS.md  README.md  analyze_section_1.py  clear_logs.sh  http2.cnf  kill_common.sh  kill_microservices.sh  load-dotenv.sh  plex.py  run_ffmpeg.sh  run_ingest.sh  run_packager.sh  section-1-all-500.json
core/api/: requirements.txt  run.py
core/backend/: pyproject.toml  requirements.txt  run.py
core/backend/app/: __init__.py  config.py  extensions.py  logging.py
core/backend/app/controllers/: auth.py  transcode.py
core/backend/app/models/: __init__.py
core/backend/app/services/: user_service.py
core/backend/data/: publex.db
core/backend/scripts/: manual_encode.sh  run_backend.sh
core/backend/src/transcoder/: __init__.py  config.py  encoder.py  exceptions.py  pipeline.py  publishing.py
core/backend/src/transcoder_backend/: __init__.py  app.py  auth.py  controller.py  logging.py
core/backend/test/: README.md  agent_encode.sh  manual_encode.sh  run.sh  run_agent.sh  run_agent_async.sh  webserver.sh
core/frontend/: jsconfig.json
core/gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
docs/: README.md  TODO.md  dash_transcoding_guide.md  ffmpeg_lessons_learned.md  golden-settings.md  live_dash_trace.md  plex_api.md  remote-ingest.md  shaka_migration.md  transcoder_overhaul_plan.md  voice_chat_planning.md
examples/: dashjs_single.html
webserver/backend/: pyproject.toml
webserver/backend/scripts/: run_webserver.sh
webserver/backend/src/webserver_app/: __init__.py  app.py
(+226 files in other folders)
