[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcoder-core-backend"
version = "0.1.0"
description = "Core backend Flask service wrapping the transcoder pipeline"
readme = "../README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["ffmpeg", "dash", "transcoder", "flask"]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "requests>=2.31",
    "Flask>=3.0",
    "Flask-Login>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
    "mypy>=1.7",
    "debugpy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
